--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ frontend-disinformation-game/*.local
 # Backend ignores
 backend-disinformation-game/node_modules/
 backend-disinformation-game/.env
+
+# Large media folders that are now in Azure
+backend-disinformation-game/downloaded_images/
+backend-disinformation-game/profile_pics/
+backend-disinformation-game/tweets.csv
