--- a/backend-disinformation-game/package.json
+++ b/backend-disinformation-game/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@azure/storage-blob": "^12.27.0",
     "axios": "^1.9.0",
+    "cor": "^0.0.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
