--- a/backend-disinformation-game/package.json
+++ b/backend-disinformation-game/package.json
@@ -11,13 +11,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@azure/storage-blob": "^12.27.0",
+    "@google-cloud/storage": "^7.16.0",
     "axios": "^1.9.0",
     "cor": "^0.0.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "firebase": "^11.7.1",
+    "firebase-admin": "^13.3.0",
+    "jsonwebtoken": "^9.0.2",
     "keyword-extractor": "^0.0.28",
     "natural": "^8.0.1",
     "nodemon": "^3.1.10"
