--- a/frontend-disinformation-game/package.json
+++ b/frontend-disinformation-game/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.3",
     "compromise": "^14.14.4",
+    "firebase": "^11.7.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss": "^4.1.3"
