--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ frontend-disinformation-game/node_modules/
 frontend-disinformation-game/dist/
 frontend-disinformation-game/dist-ssr/
 frontend-disinformation-game/*.local
+frontend-disinformation-game/.env
 
 # Backend ignores
 backend-disinformation-game/node_modules/
