--- a/python-backend/requirements.txt
+++ b/python-backend/requirements.txt
@@ -1,2 +1,7 @@
-twikit
-aiohttp
+aiohttp==3.11.18
+pandas==2.2.3
+Pillow==11.2.1
+protobuf==6.31.1
+pyautogui==0.9.54
+python_magic==0.4.27
+twikit==2.3.3
