--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,11 +1,19 @@
-# To get started with Dependabot version updates, you'll need to specify which
-# package ecosystems to update and where the package manifests are located.
-# Please see the documentation for all configuration options:
-# https://docs.github.com/code-security/dependabot/dependabot-version-updates/configuration-options-for-the-dependabot.yml-file
-
 version: 2
 updates:
-  - package-ecosystem: "pip" # See documentation for possible values
-    directory: "/" # Location of package manifests
+  # Python backend (pip)
+  - package-ecosystem: "pip"
+    directory: "/python-backend" # path to requirements.txt
+    schedule:
+      interval: "daily"
+
+  # NPM backend
+  - package-ecosystem: "npm"
+    directory: "/backend-disinformation-game" # path to package.json
+    schedule:
+      interval: "daily"
+
+  # NPM frontend
+  - package-ecosystem: "npm"
+    directory: "/frontend-disinformation-game" # path to package.json
     schedule:
       interval: "daily"
